--- a/svc/hecate/src/common/components/button-wrapper/button-wrapper.module.scss
+++ b/svc/hecate/src/common/components/button-wrapper/button-wrapper.module.scss
@@ -28,6 +28,7 @@ $text-color: #e0ffff; // Bright white text color
   overflow: hidden;
   text-transform: uppercase;
   letter-spacing: 1px;
+  z-index: 110;
 
   /* Hover and focus styles */
   &:hover, &:focus {
