--- a/svc/hecate/src/common/components/moxi/styles.module.scss
+++ b/svc/hecate/src/common/components/moxi/styles.module.scss
@@ -1,17 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Sans+MS&display=swap');
-
-$comic-font: 'Comic Sans MS', sans-serif;
-$floating-color: rgba(100, 149, 237, 0.7);
-
-@keyframes float {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-20px);
-  }
-}
-
 img {
   display: block; // Ensures the image is block level to remove extra space below
   height: auto; // Maintains the image's aspect ratio
@@ -19,33 +5,26 @@ img {
 }
 
 .characterContainer img {
-  animation: float 4s ease-in-out infinite;
+  // animation: float 4s ease-in-out infinite;
   display: block;
-  filter: drop-shadow(0 0 8px rgba(173, 216, 230, 0.6))
-          drop-shadow(0 0 20px rgba(240, 248, 255, 0.8));
+  filter: drop-shadow(0 0 8px rgba(173, 216, 230, 0.4))
+          drop-shadow(0 0 20px rgba(240, 248, 255, 0.4));
   height: auto;
   max-width: 100%;
   position: fixed;
-  right: 2%;
+  left: 2%;
   top: 20%;
+  transform: scaleX(-1); // Reflect the image along the vertical axis
+  z-index: 10;
 }
 
 @media screen and (max-width: 768px) {
   .characterContainer img {
     max-width: 50%; // Make the image smaller on mobile in portrait orientation
     // Reflect the image along the vertical axis and include the floating animation
-    animation: floatMobilePortrait 4s ease-in-out infinite;
+    // animation: floatMobilePortrait 4s ease-in-out infinite;
     top: 45%; // Adjust top positioning for mobile in portrait orientation
     right: auto; // Override any previous right positioning
-  }
-
-  @keyframes floatMobilePortrait {
-    0%, 100% {
-      transform: translateY(0) scaleX(-1);
-    }
-    50% {
-      transform: translateY(-20px) scaleX(-1);
-    }
   }
 }
 
@@ -54,17 +33,8 @@ img {
     max-width: 30%; // Further reduce the image size for landscape orientation
     top: 25%; // Adjust top positioning for landscape orientation
     // Reflect the image along the vertical axis and include the floating animation
-    animation: floatMobileLandscape 4s ease-in-out infinite;
     right: auto; // Override any previous right positioning
   }
 
-  @keyframes floatMobileLandscape {
-    0%, 100% {
-      transform: translateY(0) scaleX(-1);
-    }
-    50% {
-      transform: translateY(-20px) scaleX(-1);
-    }
-  }
 }
 
