--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 
   &:hover {
     background-color: $accent-color;
-    color: $text-color;
+    color: $text-color
   }
 }
 
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6 {
 .trader1 {
   position: fixed;
   bottom: 12px;
-  left: 0px;
+  left: calc(50% - 450px);
   width: 342px;
   height: 342px;
   z-index: 101;
